--- a/stylesheets/components/_sidebar.scss
+++ b/stylesheets/components/_sidebar.scss
@@ -1,10 +1,47 @@
 $sidebar-width: 280px;
 
-.sidebar{
+// 行動版(預設)
+.sidebar {
   width: $sidebar-width;
+  margin-left: -$sidebar-width;
+  transition:margin-left .25s;
 }
+
+.main{
+  width: 100%;
+}
+
+// 展開sidebar
+.sidebar-toggled {
+  .sidebar {
+    margin-left: 0;
+  }
+}
+
+
+
+// 桌面板
+@include media-breakpoint-up(lg){
+.sidebar{
+  margin-left: 0;
+  width: $sidebar-width;
+  }
 
 .main{
   width: calc(100vw- #{$sidebar-width});
   //變數視為字串
+  }
+}
+
+
+// 展開
+
+.sidebar-toggled{
+  .sidebar{
+    margin-left: -$sidebar-width;
+  }
+  .main{
+    width: 100%;
+    margin-left: 0;
+  }
 }
