--- a/stylesheets/components/_sidebar.scss
+++ b/stylesheets/components/_sidebar.scss
@@ -5,6 +5,32 @@ $sidebar-width: 280px;
   width: $sidebar-width;
   margin-left: -$sidebar-width;
   transition:margin-left .25s;
+  position: fixed;
+  top:0;
+}
+.sidebar-link{
+  color: #000;
+  display: block;
+  text-decoration: none;
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
+  &:hover{
+    background-color: rgba($primary, 0.16);
+  }
+}
+.sidebar-link.active{
+  position: relative;
+  color: primary !important;
+  background-color: rgba($primary, 0.16);
+  &::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 2px;
+    height: 100%;
+    width: 3px;
+    background:$primary;
+  }
 }
 
 .main{
@@ -15,6 +41,9 @@ $sidebar-width: 280px;
 .sidebar-toggled {
   .sidebar {
     margin-left: 0;
+  }
+  .main{
+    margin-left: $sidebar-width;
   }
 }
 
@@ -29,6 +58,8 @@ $sidebar-width: 280px;
 
 .main{
   width: calc(100vw- #{$sidebar-width});
+  margin-left: $sidebar-width;
+  transition: margin-left 0.25s;
   //變數視為字串
   }
 }
