--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -51,6 +51,6 @@
 
 //Components
 
-@import "./components/deco-box";
-@import "./components/utilities";
-@import "./components/sidebar";
+@import "./components/_deco-box";
+@import "./components/_utilities";
+@import "./components/_sidebar";
