--- a/stylesheets/components/_sidebar.scss
+++ b/stylesheets/components/_sidebar.scss
@@ -40,10 +40,10 @@ $sidebar-width: 280px;
 // 展開sidebar
 .sidebar-toggled {
   .sidebar {
-    margin-left: 0;
+    margin-left: 0px;
   }
   .main{
-    margin-left: $sidebar-width;
+    margin-left: 280px;
   }
 }
 
